--- a/restaurantapp/src/main/resources/application.properties
+++ b/restaurantapp/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 #### Production
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://restaurantdb.ca2w4reo63fn.eu-west-2.rds.amazonaws.com:3306/restaurant_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=springuser
-spring.datasource.password=ThePassword
-
-#### Local
 #spring.jpa.hibernate.ddl-auto=none
-#spring.datasource.url=jdbc:mysql://localhost:3306/db_example?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://restaurantdb.ca2w4reo63fn.eu-west-2.rds.amazonaws.com:3306/restaurant_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 #spring.datasource.username=springuser
 #spring.datasource.password=ThePassword
+
+#### Local
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/db_example?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=springuser
+spring.datasource.password=ThePassword
