--- a/restaurantapp/src/main/resources/application.properties
+++ b/restaurantapp/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 #spring.datasource.password=ThePassword
 
 #### Local
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/db_example?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=springuser
 spring.datasource.password=ThePassword
